--- a/LocalCalibration/test/PedestalInspection.ipynb
+++ b/LocalCalibration/test/PedestalInspection.ipynb
@@ -1,88 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "978ace6d-9a9f-4e96-ba64-2601a6e4907f",
+   "metadata": {},
+   "source": [
+    "# Pedestal inspection\n",
+    "\n",
+    "This notebook can be used to inspect the contents of a pedestal analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e9634653",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ls /eos/cms/store/group/dpg_hgcal/tb_hgcal/2024/hgcalrd/Test/calibrations/\n",
-    "!ls /eos/cms/store/group/dpg_hgcal/tb_hgcal/2024/hgcalrd/Test/calibrations_closure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "667a6e6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getCalibDirectories(run : int) -> list:\n",
-    "    basedir='/eos/cms/store/group/dpg_hgcal/tb_hgcal/2024/hgcalrd/Test'\n",
-    "    return [f'{basedir}/calibrations/Run{run}', f'{basedir}/calibrations_closure/Run{run}']\n",
-    " \n",
-    "runs=[1726225188, 1726339135, 1726346360, 1726512750, 1726304466, 1726340355, 1726428151]\n",
-    "outdir='/eos/user/p/psilva/www/HGCal/TB2024/Pedestals'\n",
-    "import os\n",
-    "os.system(f'mkdir -p {outdir}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fba7f730",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ROOT\n",
-    "def showValidChannels(run : int, outdir : str):\n",
-    "\n",
-    "    calibdir = getCalibDirectories(run)[0]\n",
-    "    url=f'{calibdir}/pedestals_hexplots.root'\n",
-    "\n",
-    "    histos={}\n",
-    "    fIn=ROOT.TFile.Open(url,'READ')\n",
-    "    for k in fIn.GetListOfKeys():\n",
-    "        mod=k.GetName()\n",
-    "        i = len(histos)\n",
-    "        histos[mod]=fIn.Get(f'{mod}/Valid').Clone(f'hexplot_{i}')\n",
-    "        histos[mod].SetDirectory(0)\n",
-    "        histos[mod].GetXaxis().SetLabelOffset(999)\n",
-    "        histos[mod].GetXaxis().SetLabelSize(0)\n",
-    "        histos[mod].GetYaxis().SetLabelOffset(999)\n",
-    "        histos[mod].GetYaxis().SetLabelSize(0)\n",
-    "        histos[mod].GetZaxis().SetRangeUser(0,1)\n",
-    "    fIn.Close()\n",
-    "\n",
-    "    ROOT.gStyle.SetPalette(ROOT.kDarkBodyRadiator)\n",
-    "    ROOT.gStyle.SetOptStat(0)\n",
-    "    ROOT.gStyle.SetOptTitle(0)\n",
-    "    c=ROOT.TCanvas('c','c',400,600)\n",
-    "    c.Divide(2,3)\n",
-    "    txt=ROOT.TLatex()\n",
-    "    txt.SetTextAlign(22)\n",
-    "    txt.SetTextFont(42)\n",
-    "    txt.SetTextSize(0.1)\n",
-    "    i=0\n",
-    "    for k in histos:\n",
-    "        p = c.cd(i+1)\n",
-    "        p.SetTopMargin(0)\n",
-    "        p.SetLeftMargin(0)\n",
-    "        p.SetRightMargin(0)\n",
-    "        p.SetBottomMargin(0)\n",
-    "        histos[k].Draw('colz')\n",
-    "        txt.DrawLatexNDC(0.5,0.15,histos[k].GetTitle())\n",
-    "        i+=1\n",
-    "    c.cd()\n",
-    "    txt.SetTextSize(0.06)\n",
-    "    txt.DrawLatexNDC(0.5,0.95,f'Run {run}')\n",
-    "    c.Modified()\n",
-    "    c.Update() \n",
-    "    c.SaveAs(f'{outdir}/Valid_Run{run}.png')\n",
-    "    \n",
-    "for r in runs:\n",
-    "    showValidChannels(r,outdir)"
+    "!ls /eos/cms/store/group/dpg_hgcal/tb_hgcal/2024/hgcalrd/SepTB2024/calibrations/"
    ]
   },
   {
@@ -92,26 +27,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#declare global variables, prepare output and import what is needed\n",
+    "import getpass\n",
     "import json\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import mplhep as hep\n",
-    "plt.style.use(hep.style.CMS)\n",
     "from scipy.optimize import curve_fit \n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
-    "def getPedestalDataset(run : int) :\n",
+    "_relay = 1726225188\n",
+    "#prepare output for plots\n",
+    "whoami=getpass.getuser()\n",
+    "_outdir=f'/eos/user/{whoami[0]}/{whoami}/www/HGCal/TB2024/Pedestals'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb3fc13a-27c6-4a6a-a34d-7bc23ed60978",
+   "metadata": {},
+   "source": [
+    "## Data I/O\n",
     "\n",
+    "The following defines a function that collates the results from the pedestal and pedestal closure analyses with the cell areas previously computed from geometry principles."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "667a6e6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getPedestalDataFrame(relay : int = 1726225188, \n",
+    "                         basedir : str = '/eos/cms/store/group/dpg_hgcal/tb_hgcal/2024/hgcalrd/SepTB2024/calibrations/') -> pd.DataFrame:\n",
+    "    \n",
+    "    #check that files exist\n",
+    "    rawurl = f'{basedir}/Relay{relay}/pedestals.json'\n",
+    "    if not os.path.isfile(rawurl):\n",
+    "        raise ValueError(f'Could not find pedestals file for relay {relay}')\n",
+    "\n",
+    "    url = f'{basedir}/Relay{relay}/pedestalsclosure.json'\n",
+    "    if not os.path.isfile(url):\n",
+    "        raise ValueError(f'Could not find pedestals closure file for relay {relay}')\n",
+    "    \n",
+    " \n",
     "    #cell area information\n",
-    "    with open('cellareas.json') as fin:\n",
+    "    with open('../data/cellareas.json') as fin:\n",
     "        cellareas = json.load(fin)\n",
     "    def _assignCellArea(row):    \n",
     "        typecodeNoBP=row['Typecode'][0:4].replace('-','_')\n",
     "        return cellareas[typecodeNoBP]['SF']\n",
     "    \n",
     "    #read pedestal json\n",
-    "    calibdir, closuredir = getCalibDirectories(run)\n",
-    "    with open(f'{calibdir}/pedestals.json') as fin:\n",
+    "    with open(rawurl) as fin:\n",
     "        data = pd.read_json(fin,orient='index')\n",
     "        cols = data.columns\n",
     "        data.reset_index(inplace=True)\n",
@@ -122,25 +92,34 @@
     "        data['ROC'] = data['Channel']/74\n",
     "        data = data.astype({'ROC':int})\n",
     "    \n",
-    "    closureurl=f'{closuredir}/pedestalsclosure.json'\n",
-    "    closuredata = None\n",
-    "    if os.path.isfile(closureurl):\n",
-    "        with open(closureurl) as fin:\n",
-    "            closuredata = pd.read_json(fin,orient='index')\n",
-    "            cols = closuredata.columns\n",
-    "            closuredata.reset_index(inplace=True)\n",
-    "            closuredata = closuredata.rename({'index':'Typecode'},axis=1)\n",
-    "            closuredata['Typecode'] = closuredata['Typecode'].str.replace('-','_')\n",
-    "            def _addChannel(row):\n",
-    "                nch=len(row['En_rms'])\n",
-    "                return [i for i in range(nch)]\n",
-    "            closuredata['Channel'] = closuredata.apply(_addChannel,axis=1)\n",
-    "            closuredata = closuredata.explode(list(cols)+['Channel'])            \n",
-    "        data = data.merge(closuredata, on=['Typecode','Channel'], how='inner')\n",
+    "    with open(url) as fin:\n",
+    "        closuredata = pd.read_json(fin,orient='index')\n",
+    "        cols = closuredata.columns\n",
+    "        closuredata.reset_index(inplace=True)\n",
+    "        closuredata = closuredata.rename({'index':'Typecode'},axis=1)\n",
+    "        closuredata['Typecode'] = closuredata['Typecode'].str.replace('-','_')\n",
+    "        def _addChannel(row):\n",
+    "            nch=len(row['En_rms'])\n",
+    "            return [i for i in range(nch)]\n",
+    "        closuredata['Channel'] = closuredata.apply(_addChannel,axis=1)\n",
+    "        closuredata = closuredata.explode(list(cols)+['Channel'])            \n",
+    "    data = data.merge(closuredata, on=['Typecode','Channel'], how='inner')\n",
     "    \n",
     "    return data\n",
     "\n",
-    "data = dict( [(run,getPedestalDataset(run)) for run in runs])"
+    "os.system(f'mkdir -p {outdir}')\n",
+    "df = getPedestalDataFrame(relay = _relay)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74baee37-91c2-4d4a-be52-e01eeda1d2bf",
+   "metadata": {},
+   "source": [
+    "## Check for invalid channels\n",
+    "\n",
+    "Simple sanity check on the dataframe to be used for analysis below"
    ]
   },
   {
@@ -150,11 +129,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for r, df in data.items():\n",
-    "    mask=(df['Valid']==0)\n",
-    "    print(f'Percentage of invalid channels in run {r}: {100*mask.sum()/df.shape[0]}')\n",
-    "    if mask.sum():\n",
-    "        print(df[mask][['Typecode','Channel']])"
+    "#inspect valid channels\n",
+    "mask=(df['Valid']==0)\n",
+    "print(f'Percentage of invalid channels in relay {_relay}: {100*mask.sum()/df.shape[0]} %')\n",
+    "if mask.sum():\n",
+    "    print(df[mask][['Typecode','Channel']])\n",
+    "else:\n",
+    "    print('\\t...yay!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06b7a40d-24e4-414f-9e39-6f518c7946c0",
+   "metadata": {},
+   "source": [
+    "## Histograms of pedestal-related quantities\n",
+    "\n",
+    "Below a series of histograms are drawn for the run of interest."
    ]
   },
   {
@@ -164,13 +155,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.style.use(hep.style.CMS)\n",
-    "\n",
     "def showPlotComparisonsFor(df,var,varLabel,bins,outfile):\n",
     "    \n",
     "    if not var in df.columns: return\n",
+    "    plt.style.use(hep.style.CMS)\n",
     "    \n",
-    "    fig, ax = plt.subplots(1,3,figsize=(18,6))\n",
+    "    fig, ax = plt.subplots(1,3,figsize=(24,8))\n",
     "    \n",
     "    kwargs={'histtype':'fill','edgecolor':'black','alpha':0.5,'stack':False,'lw':2}\n",
     "    \n",
@@ -204,61 +194,37 @@
     "    hep.histplot(histos,bins=bins,**kwargs,ax=ax[2],label=labels)\n",
     "                  \n",
     "    for i in range(3):\n",
-    "        ax[i].legend(fontsize=12,loc='upper left')\n",
+    "        ax[i].legend(fontsize=16,loc='upper right')\n",
     "        ax[i].grid()\n",
     "        ax[i].set_xlabel(varLabel)\n",
-    "    fig.tight_layout\n",
+    "    hep.cms.label(loc=0, exp='HGCAL', llabel='', rlabel=\"Sep'24\",ax=ax[0])\n",
+    "    fig.tight_layout()\n",
     "    plt.savefig(f'{outfile}_{var}.png')\n",
     "    plt.close()\n",
     "\n",
-    "for r, df in data.items():\n",
-    "    for var, varLabel, bins in [\n",
-    "        ('cm2_slope',  r'ADC vs $CM_{2}$ slope',   np.linspace(-0.2,1.0,50)),\n",
-    "        ('cm4_slope',  r'ADC vs $CM_{4}$ slope',   np.linspace(-0.2,1.0,50)),\n",
-    "        ('cmall_slope',r'ADC vs $CM_{all}$ slope', np.linspace(-0.2,1.0,50)),\n",
-    "        ('adcm1_slope',r'ADC vs ADC(BX-1) slope', np.linspace(-0.2,0.2,50)),                            \n",
-    "        ('ADC_rms','RMS(ADC)',np.linspace(0,5,50)),\n",
-    "        ('En_ped','Residual pedestal',np.linspace(-5,5,50)),\n",
-    "        ('En_rms','RMS(RecHit)',np.linspace(0,5,50)),\n",
-    "        ('CM_slope','Residual $CM_{2}$ slope',np.linspace(-0.2,1,50)),\n",
-    "        ('CNF','Coeherent noise fraction',np.linspace(0,0.5,50)),\n",
-    "        ]:\n",
-    "        showPlotComparisonsFor(df, var,varLabel,bins, f'{outdir}/Run{r}')"
+    "for var, varLabel, bins in [\n",
+    "    ('cm2_slope',  r'ADC vs $CM_{2}$ slope',   np.linspace(-0.2,1.0,50)),\n",
+    "    ('cm4_slope',  r'ADC vs $CM_{4}$ slope',   np.linspace(-0.2,1.0,50)),\n",
+    "    ('cmall_slope',r'ADC vs $CM_{all}$ slope', np.linspace(-0.2,1.0,50)),\n",
+    "    ('adcm1_slope',r'ADC vs ADC(BX-1) slope', np.linspace(-0.2,0.2,50)),                            \n",
+    "    ('ADC_rms','RMS(ADC)',np.linspace(0,5,50)),\n",
+    "    ('En_ped','Residual pedestal',np.linspace(-5,5,50)),\n",
+    "    ('En_rms','RMS(RecHit)',np.linspace(0,5,50)),\n",
+    "    ('CM_slope','Residual $CM_{2}$ slope',np.linspace(-0.2,1,50)),\n",
+    "    ('CNF','Coeherent noise fraction',np.linspace(0,0.5,50)),\n",
+    "]:\n",
+    "    showPlotComparisonsFor(df, var,varLabel,bins, f'{_outdir}/Relay{_relay}')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1941e7a7",
+   "cell_type": "markdown",
+   "id": "86fa7d31-9a70-4d7a-8da2-ecf76f67190e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def compareCalib(var,vartitle,outdir,runs=[1726304466,1726339135,1726512750]):\n",
+    "# Noise modelling\n",
     "\n",
-    "    modules = data[runs[0]]['Typecode'].unique()\n",
-    "    for m in modules:\n",
-    "\n",
-    "        fig, ax = plt.subplots(figsize=(12,6))\n",
-    "        for r in runs:\n",
-    "            mask=(data[r]['Typecode'].str.find(m)>=0)\n",
-    "            ax.plot(data[r][mask]['Channel'],data[r][mask][var],label=f'{r}')\n",
-    "        ax.grid()\n",
-    "        ax.text(0.05,0.1,m,transform=ax.transAxes)\n",
-    "        ax.set_xlabel('Channel')\n",
-    "        ax.set_ylabel(vartitle)\n",
-    "        ax.legend(loc='upper left')\n",
-    "        fig.tight_layout()\n",
-    "        fig.savefig(f'{outdir}/{m}_{var}.png')\n",
-    "        plt.close()\n",
-    "    \n",
-    "for var,vartitle in [\n",
-    "        ('ADC_ped','Pedestal'),\n",
-    "        ('cm2_slope','rADC vs $CM_{2}$ slope'),\n",
-    "        ('ADC_rms','RMS(ADC)'),\n",
-    "        ('adcm1_slope',r'ADC vs $CM_{all}$ slope')\n",
-    "    ]:\n",
-    "    compareCalib(var,vartitle,outdir)\n",
-    "    "
+    "In the absence of leakage current (sensors have not yet been irradiated), the noise is expected to scale with the capacitance, and hence with the area of the cells.\n",
+    "In the following we assume a simple quadratic scaling (as indicated by HGCROC simulations) and fit it to the data."
    ]
   },
   {
@@ -294,36 +260,36 @@
     "    yvars=np.array(yvars)\n",
     "\n",
     "    #show plot\n",
-    "    fig, ax = plt.subplots(figsize=(8,8))\n",
+    "    fig, ax = plt.subplots(figsize=(10,10))\n",
     "\n",
     "    #expected\n",
-    "    adc2fC=0.238 #typical adc2fC\n",
+    "    #typical adc2fC from CalPulse : NOTE here we could simply read the calpulse file\n",
+    "    adc2fC=0.19 \n",
     "    Cap=xs*45.  #capacitance of 300 um\n",
     "    exp_param=(0.000017*(Cap**2)+0.002119*Cap+0.190295)/adc2fC\n",
-    "    ax.plot(xs,exp_param, lw=2, ls='--', c='gray',label='expected')\n",
     "\n",
     "    #observed\n",
     "    H, xedges, yedges = np.histogram2d(x, y, bins=(np.linspace(0.1,1.5,40), np.linspace(0,5,50)))\n",
     "    hep.hist2dplot(H, xedges, yedges, labels=False,cmin=1)\n",
     "    ax.fill_between(xs,yvars.min(axis=0), yvars.max(axis=0),alpha=0.2)\n",
-    "    ax.plot(xs,_noiseModel(xs,*popt),lw=2,ls='-',c='r',label='fit')\n",
+    "    ax.plot(xs,_noiseModel(xs,*popt),lw=2,ls='-',c='r',\n",
+    "            label=rf'${popt[0]:3.2f} \\cdot \\left( \\frac{{A}}{{A_{{full}}}}  \\right)^2 + {popt[1]:3.3f} \\cdot \\left( \\frac{{A}}{{A_{{full}}}}  \\right) + {popt[0]:3.3f}$')\n",
     "\n",
-    "    txt_kwargs={'transform':ax.transAxes, 'fontsize':14}\n",
-    "    ax.text(0.05,0.8,f'#channels used = {mask.sum()}', **txt_kwargs) \n",
-    "    ax.text(0.05,0.75, fr'$Noise~={popt[0]:3.3f}\\cdot SF^2+{popt[1]:3.3f}\\cdot SF+{popt[2]:3.3f}$',  **txt_kwargs) \n",
+    "    #expected\n",
+    "    ax.plot(xs,exp_param, lw=2, ls='--', c='gray',label='HGCROC simulation')\n",
     "\n",
     "    ax.legend(loc='upper left')\n",
     "    ax.grid()\n",
     "    ax.set_ylabel('Noise')\n",
-    "    #ax.set_ylim(0.5,5)\n",
-    "    ax.set_xlabel('Cell area / Full cell area')\n",
+    "    ax.set_ylim(0.5,4)\n",
+    "    ax.set_xlabel(r'$\\frac{{A}}{{A_{{full}}}}$ = Cell area / Full cell area')\n",
+    "    hep.cms.label(loc=0, exp='HGCAL', llabel='', rlabel=\"Sep'24\",ax=ax)\n",
     "    fig.tight_layout()\n",
     "    plt.savefig(outfile)\n",
     "    plt.close()\n",
     "    \n",
-    "for r in [1726304466,1726339135,1726512750]:\n",
-    "    for var in ['ADC_rms','En_rms']:\n",
-    "        runNoiseModelFit(data[r],var,f'{outdir}/Run{r}_{var}_noisescaling')"
+    "for var in ['ADC_rms','En_rms']:\n",
+    "    runNoiseModelFit(df,var,f'{_outdir}/Relay{_relay}_{var}_noisescaling')"
    ]
   },
   {
