--- a/LocalCalibration/test/PedestalInspection.ipynb
+++ b/LocalCalibration/test/PedestalInspection.ipynb
@@ -40,7 +40,8 @@
     "_relay = 1726225188\n",
     "#prepare output for plots\n",
     "whoami=getpass.getuser()\n",
-    "_outdir=f'/eos/user/{whoami[0]}/{whoami}/www/HGCal/TB2024/Pedestals'"
+    "_outdir=f'/eos/user/{whoami[0]}/{whoami}/www/HGCal/TB2024/Pedestals'\n",
+    "os.system(f'mkdir -p {_outdir}')"
    ]
   },
   {
@@ -107,7 +108,6 @@
     "    \n",
     "    return data\n",
     "\n",
-    "os.system(f'mkdir -p {outdir}')\n",
     "df = getPedestalDataFrame(relay = _relay)\n",
     "df.head()"
    ]
@@ -208,12 +208,134 @@
     "    ('cmall_slope',r'ADC vs $CM_{all}$ slope', np.linspace(-0.2,1.0,50)),\n",
     "    ('adcm1_slope',r'ADC vs ADC(BX-1) slope', np.linspace(-0.2,0.2,50)),                            \n",
     "    ('ADC_rms','RMS(ADC)',np.linspace(0,5,50)),\n",
+    "    ('ADC_ped','Pedestal',np.linspace(50.5,200.5,151)),\n",
     "    ('En_ped','Residual pedestal',np.linspace(-5,5,50)),\n",
     "    ('En_rms','RMS(RecHit)',np.linspace(0,5,50)),\n",
     "    ('CM_slope','Residual $CM_{2}$ slope',np.linspace(-0.2,1,50)),\n",
     "    ('CNF','Coeherent noise fraction',np.linspace(0,0.5,50)),\n",
     "]:\n",
     "    showPlotComparisonsFor(df, var,varLabel,bins, f'{_outdir}/Relay{_relay}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42dc8f8d-8a8b-4aa0-97fb-d086f4945548",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simplePlotComparisonsFor(df,var,varLabel,bins,outfile):\n",
+    "    \n",
+    "    if not var in df.columns: return\n",
+    "    plt.style.use(hep.style.CMS)\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(10,10))    \n",
+    "    ax.hist(df[var],bins=bins,histtype='step',lw=2)\n",
+    "    hep.cms.label(loc=0, exp='HGCAL', llabel='', rlabel=\"Sep'24\",ax=ax)\n",
+    "    ax.grid()\n",
+    "    ax.set_xlabel(varLabel)\n",
+    "    ax.set_ylabel('Channels')\n",
+    "    fig.tight_layout()\n",
+    "    plt.savefig(f'{outfile}_{var}.png')\n",
+    "    plt.close()\n",
+    "\n",
+    "for var, varLabel, bins in [\n",
+    "    ('ADC_ped','Pedestal',np.linspace(50.5,200.5,151)),\n",
+    "    ('En_ped','Residual pedestal',np.linspace(-5,5,50)),\n",
+    "]:\n",
+    "    simplePlotComparisonsFor(df, var,varLabel,bins, f'{_outdir}/Relay{_relay}_inc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b18cb544-2e27-4e6a-835c-cec7b326c019",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ROOT\n",
+    "import itertools\n",
+    "\n",
+    "def showCMCorrelation( erx : int,\n",
+    "                       relay : int,\n",
+    "                       outfile : str,\n",
+    "                       xran = None,\n",
+    "                       yran = None,\n",
+    "                       basedir : str = '/eos/cms/store/group/dpg_hgcal/tb_hgcal/2024/hgcalrd/SepTB2024/calibrations/',\n",
+    "                       module : str = 'ML_F3WX_IH0018'):\n",
+    "    \n",
+    "    url = f'{basedir}/Relay{relay}/histofiller/{module}.root'\n",
+    "    fIn = ROOT.TFile.Open(url)\n",
+    "    h = fIn.Get('adcvscm2')\n",
+    "    nx, xmin, xmax = h.GetNbinsX(), h.GetXaxis().GetXmin(), h.GetXaxis().GetXmax()\n",
+    "    ny, ymin, ymax = h.GetNbinsY(), h.GetYaxis().GetXmin(), h.GetYaxis().GetXmax()\n",
+    "    nz, zmin, zmax = h.GetNbinsZ(), h.GetZaxis().GetXmin(), h.GetZaxis().GetXmax()\n",
+    "    cmvsadc = ROOT.TH2F('cmvsadc',';Common mode;ADC;Events',ny,ymin,ymax,nz,zmin,zmax)\n",
+    "\n",
+    "    ROOT.gStyle.SetOptStat(0)\n",
+    "    ROOT.gStyle.SetOptFit(0)\n",
+    "    c = ROOT.TCanvas('c','c',1200,1200)\n",
+    "    c.Divide(5,8)\n",
+    "\n",
+    "    histos = []\n",
+    "    labels = []\n",
+    "    for i in range(37):\n",
+    "        ch = i + erx*37\n",
+    "\n",
+    "        p = c.cd(i+1)\n",
+    "        p.SetGridx()\n",
+    "        p.SetGridy()\n",
+    "        p.SetTopMargin(0)\n",
+    "        p.SetLeftMargin(0.15 if i%5==0 else 0)\n",
+    "        p.SetRightMargin(0)\n",
+    "        p.SetBottomMargin(0.16 if i>34 else 0)\n",
+    "        histos.append( cmvsadc.Clone(f'ch_{ch}') )\n",
+    "        for iy,iz in itertools.product( range(ny), range(nz) ):\n",
+    "            cts = h.GetBinContent(ch+1,iy+1,iz+1)\n",
+    "            histos[-1].SetBinContent(iy+1,iz+1,cts)\n",
+    "        histos[-1].Draw('col')\n",
+    "        histos[-1].GetXaxis().SetTitleSize(0.1)\n",
+    "        histos[-1].GetYaxis().SetTitleSize(0.1)\n",
+    "        histos[-1].GetXaxis().SetTitleOffset(0.7)\n",
+    "        histos[-1].GetYaxis().SetTitleOffset(0.8)\n",
+    "        histos[-1].GetXaxis().SetLabelSize(0.1)\n",
+    "        histos[-1].GetYaxis().SetLabelSize(0.1)\n",
+    "        \n",
+    "        histos.append( histos[-1].ProfileX() )\n",
+    "        histos[-1].SetMarkerStyle(20)\n",
+    "        histos[-1].SetMarkerSize(0.05)\n",
+    "        histos[-1].SetMarkerColor(1)\n",
+    "        histos[-1].Draw('e1same')\n",
+    "        histos[-1].Fit('pol1','QM+','same')\n",
+    "        \n",
+    "        labels.append( ROOT.TLatex() )\n",
+    "        labels[-1].SetNDC()\n",
+    "        labels[-1].SetTextFont(42)\n",
+    "        labels[-1].SetTextSize(0.1)\n",
+    "        labels[-1].DrawLatex(0.2 if i%5==0 else 0.1,0.9,f'Channel {ch}')\n",
+    "\n",
+    "        if not xran is None:\n",
+    "            histos[-2].GetXaxis().SetRangeUser(*xran)\n",
+    "        if not yran is None:\n",
+    "            histos[-2].GetYaxis().SetRangeUser(*yran)\n",
+    "        \n",
+    "    c.cd(40)\n",
+    "    txt  = ROOT.TLatex()\n",
+    "    txt.SetNDC()\n",
+    "    txt.SetTextFont(42)\n",
+    "    txt.SetTextSize(0.15)\n",
+    "    txt.DrawLatex(0.2,0.8,\"#bf{HGCAL} Sep'2024\")\n",
+    "    txt.DrawLatex(0.2,0.5,f'Relay {relay}')\n",
+    "    txt.DrawLatex(0.2,0.2,f'e-Rx {erx}')\n",
+    "    \n",
+    "    c.cd()\n",
+    "    c.Modified()\n",
+    "    c.Update()\n",
+    "    c.SaveAs(f'{outfile}_erx{erx}.png')\n",
+    "    fIn.Close()\n",
+    "\n",
+    "for erx in range(6):\n",
+    "    showCMCorrelation(erx,_relay,f'{_outdir}/Relay{_relay}_cm') #,xran=(80,120),yran=(80,220))"
    ]
   },
   {
